Improvement + bill infos
Signed-off-by: Edouard Rabany

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,3 +37,8 @@ body {
 paper-toast {
   z-index: 200;
 }
+
+#dropShadow.paper-header-panel {
+	opacity: 0.8 !important;
+	left: -100% !important;
+}
